--- a/Assignment 3/Algorithms Lab 3/main.tex
+++ b/Assignment 3/Algorithms Lab 3/main.tex
@@ -479,4 +479,15 @@ public class QueueBilotto {
 
 \end{lstlisting}
 
+\begin{center}
+\begin{tabular}{ |c|c|c| } 
+ \hline
+ Search Name or Hashing & Complexity & number of compares \\ 
+ Linear & O(1) to O(n) & 333.666 \\ 
+ Binary & O(1) to O(log n) & 7.5  \\ 
+ Hashing & O(1) to O(n) & 5 \\ 
+ \hline
+\end{tabular}
+\end{center}
+
 \end{document}
